--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,8 @@ a {
 /* body {
   overflow: visible;
 } */
+
+.MuiGrid-root.MuiGrid-container.MuiGrid-spacing-xs-10.MuiGrid-align-items-xs-flex-start.MuiGrid-justify-xs-center {
+  width: 95%;
+  margin: auto;
+}
